Fix button spacing on menu page

--- a/less/main.less
+++ b/less/main.less
@@ -300,9 +300,6 @@ ul {
 .menu-order-button {
   margin: 0 auto;
   text-align: center;
-  max-width: 500px;
-  height: 50vh;
-  max-height: 800px;
   border-radius: 2rem;
 }
 
